--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,10 @@
 body {
   font-family: 'Roboto', sans-serif; }
 
+img {
+  width: 100%;
+  height: auto; }
+
 .slab {
   font-family: "Roboto Slab", serif; }
 
@@ -20,9 +24,6 @@ header {
 
 .podcast {
   padding: 20px 100px; }
-  .podcast img {
-    width: 100%;
-    height: auto; }
 
 .linea {
   margin: 20px 100px;
@@ -32,9 +33,6 @@ header {
 
 .news {
   padding: 20px 100px; }
-  .news img {
-    width: 100%;
-    height: auto; }
   .news .text-blue {
     text-align: right;
     color: #4285F4; }
@@ -50,9 +48,6 @@ header {
 
 .porfolio {
   padding: 20px 100px; }
-  .porfolio img {
-    width: 100%;
-    height: auto; }
 
 .info {
   padding: 20px 100px; }
